@@ -287,15 +287,20 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA 470PD  (EXPERIMENTAL)
        Canon PIXMA 475PD  (EXPERIMENTAL)
        Canon PIXMA 550i   (EXPERIMENTAL)
+       Canon PIXMA 560i   (EXPERIMENTAL)
        Canon PIXMA 850i   (EXPERIMENTAL)
        Canon PIXMA 6100i  (EXPERIMENTAL)
        Canon PIXMA 6500i  (EXPERIMENTAL)
        Canon PIXMA i70    (EXPERIMENTAL)
        Canon PIXMA i450   (EXPERIMENTAL)
+       Canon PIXMA i450X  (EXPERIMENTAL)
        Canon PIXMA i455   (EXPERIMENTAL)
+       Canon PIXMA i455X  (EXPERIMENTAL)
        Canon PIXMA i470D  (EXPERIMENTAL)
        Canon PIXMA i475D  (EXPERIMENTAL)
        Canon PIXMA i550   (EXPERIMENTAL)
+       Canon PIXMA i550X  (EXPERIMENTAL)
+       Canon PIXMA i560X  (EXPERIMENTAL)
        Canon PIXMA i900D  (EXPERIMENTAL)
        Canon PIXMA i950   (EXPERIMENTAL)
        Canon PIXMA i960   (EXPERIMENTAL)
@@ -385,9 +390,6 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon   BJC S600   (EXPERIMENTAL)
        Canon   BJC S800   (EXPERIMENTAL)
        Canon PIXMA i80    (EXPERIMENTAL)
-       Canon PIXMA i450   (EXPERIMENTAL)
-       Canon PIXMA i455   (EXPERIMENTAL)
-       Canon PIXMA i470D  (EXPERIMENTAL)
        Canon PIXMA i560   (EXPERIMENTAL)
        Canon PIXMA i850   (EXPERIMENTAL) *1
        Canon PIXMA i860   (EXPERIMENTAL) *1
@@ -426,6 +428,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 
   6) CD printing support for the following printers was added:
 
+       Canon PIXMA i560
        Canon PIXMA iP4600
        Canon PIXMA iP4700
        Canon PIXMA iP4800
@@ -443,6 +446,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
      as they cannot currently be supported, even experimentally, owing
      to an as-yet unknown command format or other issues:
 
+       Canon PIXMA 320i
        Canon PIXMA i250
        Canon PIXMA i320
        Canon PIXMA i350
@@ -509,6 +513,9 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
       matched with non-Japan i* series (e.g., i70) printers, and
       support for inkjet Hagaki and plain Hagaki added to the
       non-Japan models where equivalent Japan models exist.
+
+  16) Added borderless functionality to most Canon printers (except S
+      series and BJC series).
 
 * Changes from 5.2.6
 
